kubernetes/overlays/local/maud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maud
spec:
  template:
    spec:
      containers:
        - name: maud
          imagePullPolicy: "Never"
