kubernetes/overlays/local/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: maud
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: maud
              servicePort: http
